[gd_scene load_steps=4 format=3 uid="uid://d103jy5tatdjc"]

[ext_resource type="Texture2D" uid="uid://xtdknp1ofolg" path="res://icon.svg" id="1_j271i"]
[ext_resource type="Script" path="res://main_scene.gd" id="1_khxyw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dlqi"]
size = Vector2(232, 201)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_khxyw")

[node name="KabulAlani" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KabulAlani"]
position = Vector2(818, 547.5)
shape = SubResource("RectangleShape2D_6dlqi")

[node name="Icon" type="Sprite2D" parent="KabulAlani"]
modulate = Color(0, 1, 0, 1)
position = Vector2(818, 547.5)
scale = Vector2(1.8125, 1.57031)
texture = ExtResource("1_j271i")

[node name="RedAlani" type="Area2D" parent="."]
position = Vector2(-442, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedAlani"]
position = Vector2(818, 547.5)
shape = SubResource("RectangleShape2D_6dlqi")

[node name="Icon" type="Sprite2D" parent="RedAlani"]
modulate = Color(1, 0, 0, 1)
position = Vector2(818, 547.5)
scale = Vector2(1.8125, 1.57031)
texture = ExtResource("1_j271i")

[node name="Button" type="Button" parent="."]
offset_left = 484.0
offset_top = 52.0
offset_right = 734.0
offset_bottom = 113.0
text = "Onay icin bekleyen nesne"

[node name="OnayBekleyenNesneler" type="Node2D" parent="."]

[connection signal="body_entered" from="KabulAlani" to="." method="_on_kabul_alani_body_entered"]
[connection signal="body_entered" from="RedAlani" to="." method="_on_red_alani_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
